--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <h1 class="swe-text-2xl sm:swe-text-4xl swe-font-bold swe-text-white">Rated the "best pillow for side sleepers" according to Forbes.</h1>
                     <p class="swe-mt-1 swe-text-lg md:swe-text-xl swe-text-gray-300">
                         And for stomach and back sleepers, too.
-                        <i>(Just ask our customers.)</i>
+                        <i>(Just ask our customers..)</i>
                     </p>
                 </div>
 
