--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div id="app" class="swe-bg-sky-950 swe-flex swe-justify-center swe-py-10 swe-px-4">
             <div class="swe-container">
                 <div class="swe-text-center">
-                    <h1 class="swe-text-2xl sm:swe-text-4xl swe-font-bold swe-text-white">Rated the "best pillow for side sleepers" according to Forbes.</h1>
-                    <p class="swe-mt-1 swe-text-lg md:swe-text-xl swe-text-gray-300">
+                    <h1 class="swe-text-2xl sm:swe-text-[28px] swe-font-bold swe-text-white">Rated the "best pillow for side sleepers" according to Forbes.</h1>
+                    <p class="swe-mt-1 swe-text-lg md:swe-text-[24px] swe-text-gray-300">
                         And for stomach and back sleepers, too.
-                        <i>(Just ask our customers..)</i>
+                        <i>(Just ask our customers.)</i>
                     </p>
                 </div>
 
@@ -26,14 +26,14 @@
                 </div>
 
                 <div class="swe-group swe-flex swe-flex-wrap swe-gap-14 swe-mt-4 swe-justify-center">
-                    <img class="swe-w-[139px] swe-img swe-h-[160px] swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/6.png" alt="Ratting" />
-                    <img class="swe-w-[139px] swe-img swe-h-[160px] swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/1.png" alt="Customers" />
-                    <img class="swe-w-[139px] swe-img swe-h-[160px] swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/2.png" alt="Customers Satisfied" />
-                    <img class="swe-w-[139px] swe-img swe-h-[160px] swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/3.png" alt="Customers" />
+                    <img class="swe-w-[137px] swe-img swe-h-[159px] swe-object-cover swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/6.png" alt="Ratting" />
+                    <img class="swe-w-[137px] swe-img swe-h-[159px] swe-object-cover swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/1.png" alt="Customers" />
+                    <img class="swe-w-[137px] swe-img swe-h-[159px] swe-object-cover swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/2.png" alt="Customers Satisfied" />
+                    <img class="swe-w-[137px] swe-img swe-h-[159px] swe-object-cover swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/3.png" alt="Customers" />
                 </div>
 
                 <div class="swe-flex swe-flex-col swe-items-center swe-gap-4 swe-m-12">
-                    <h2 class="swe-text-white swe-text-2xl sm:swe-text-4xl swe-md:swe-text-2xl swe-font-semibold swe-text-center">Hear it from our clients</h2>
+                    <h2 class="swe-text-white swe-text-2xl sm:swe-text-[28px] swe-font-semibold swe-text-center">Hear it from our clients</h2>
                     <button class="swe-border swe-button swe-text-base swe-border-gray-300 hover:swe-border-gray-100 swe-px-4 swe-py-2 swe-text-gray-300 hover:swe-text-gray-100 swe-text-center">Read Reviews</button>
                 </div>
             </div>
