--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 </div>
 
                 <div class="swe-group swe-flex swe-flex-wrap swe-gap-14 swe-mt-4 swe-justify-center">
-                    <img class="swe-w-[137px] swe-img swe-h-[159px] swe-object-cover swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/6.png" alt="Ratting" />
-                    <img class="swe-w-[137px] swe-img swe-h-[159px] swe-object-cover swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/1.png" alt="Customers" />
-                    <img class="swe-w-[137px] swe-img swe-h-[159px] swe-object-cover swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/2.png" alt="Customers Satisfied" />
-                    <img class="swe-w-[137px] swe-img swe-h-[159px] swe-object-cover swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/3.png" alt="Customers" />
+                    <img class="swe-w-[159px] swe-swe-h-[159px] swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/6.png" alt="Ratting" />
+                    <img class="swe-w-[159px] swe-swe-h-[159px] swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/1.png" alt="Customers" />
+                    <img class="swe-w-[159px] swe-swe-h-[159px] swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/2.png" alt="Customers Satisfied" />
+                    <img class="swe-w-[159px] swe-swe-h-[159px] swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/3.png" alt="Customers" />
                 </div>
 
                 <div class="swe-flex swe-flex-col swe-items-center swe-gap-4 swe-m-12">
