--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class="swe-group swe-flex swe-flex-wrap swe-gap-14 swe-mt-4 swe-justify-center">
-                    <img class="swe-w-[159px] swe-swe-h-[159px] swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/5555555555555555-01" alt="Ratting" />
+                    <img class="swe-w-[159px] swe-swe-h-[159px] swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/5555555555555555-01.png" alt="Ratting" />
                     <img class="swe-w-[159px] swe-swe-h-[159px] swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/5555555555555555-02.png" alt="Customers" />
                     <img class="swe-w-[159px] swe-swe-h-[159px] swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/5555555555555555-03.png" alt="Customers Satisfied" />
                     <img class="swe-w-[159px] swe-swe-h-[159px] swe-zoom-on-hover" src="https://cdn-seven-xi.vercel.app/image/5555555555555555-04.png" alt="Customers" />
