change text size

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <div class="swe-flex swe-flex-col swe-items-center swe-gap-4 swe-m-12">
                     <h2 class="swe-text-white swe-text-2xl sm:swe-text-[28px] swe-font-semibold swe-text-center">Hear it from our clients</h2>
-                    <button class="swe-border swe-button swe-text-base swe-border-gray-300 hover:swe-border-gray-100 swe-px-4 swe-py-2 swe-text-gray-300 hover:swe-text-gray-100 swe-text-center">Read Reviews</button>
+                    <button class="swe-border swe-w-[184px] swe-h-[52px] swe-font-bold swe-button swe-text-lg swe-border-gray-300 hover:swe-border-gray-100 swe-px-4 swe-py-2 swe-text-gray-300 hover:swe-text-gray-100 swe-text-center">Read Reviews</button>
                 </div>
             </div>
         </div>
